k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abhedya
  labels:
    name: abhedya
    environment: production
    managed-by: helm
