k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abhedya-ai-core
  namespace: abhedya
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: abhedya-ai-core
